@@ -1,0 +1,41 @@
+[manageiq-19-spassky]
+name=ManageIQ 19 (Spassky) Release - $basearch
+baseurl=https://rpm.manageiq.org/release/19-spassky/el$releasever/$basearch
+enabled=1
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
+
+[manageiq-19-spassky-noarch]
+name=ManageIQ 19 (Spassky) Release - noarch
+baseurl=https://rpm.manageiq.org/release/19-spassky/el$releasever/noarch
+enabled=1
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
+
+[manageiq-19-spassky-source]
+name=ManageIQ 19 (Spassky) Release - source
+baseurl=https://rpm.manageiq.org/release/19-spassky/el$releasever/src
+enabled=0
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
+
+[manageiq-19-spassky-nightly]
+name=ManageIQ 19 (Spassky) Nightly - $basearch
+baseurl=https://rpm.manageiq.org/release/19-spassky-nightly/el$releasever/$basearch
+enabled=0
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
+
+[manageiq-19-spassky-nightly-noarch]
+name=ManageIQ 19 (Spassky) Nightly - noarch
+baseurl=https://rpm.manageiq.org/release/19-spassky-nightly/el$releasever/noarch
+enabled=0
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
+
+[manageiq-19-spassky-nightly-source]
+name=ManageIQ 19 (Spassky) Nightly - source
+baseurl=https://rpm.manageiq.org/release/19-spassky-nightly/el$releasever/src
+enabled=0
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-MANAGEIQ
