@@ -1,4 +1,7 @@
 %changelog
+* Fri Feb 23 2024 Jason Frey <fryguy9@gmail.com> - 19.0.0-1
+- Initial build of manageiq-release for Spassky.
+
 * Sat Aug 12 2023 Jason Frey <fryguy9@gmail.com> - 18.0.0-1
 - Initial build of manageiq-release for Radjabov.
 
